--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,16 +1,16 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to 'Ingresar', new_session_path(resource_name) %><br />
+    <%= link_to 'Ingresar', new_session_path(resource_name), class: 'text-footer'  %><br/>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to 'Registrarse', new_registration_path(resource_name) %><br />
+    <%= link_to 'Registrarse', new_registration_path(resource_name), class: 'text-footer' %><br/>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to '¿Olvidó su contraseña?', new_password_path(resource_name) %><br />
+    <%= link_to '¿Olvidó su contraseña?', new_password_path(resource_name), class: 'text-footer'  %><br/>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to '¿No ha recibido las instrucciones de confirmación?', new_confirmation_path(resource_name) %><br />
+    <%= link_to '¿No ha recibido las instrucciones de confirmación?', new_confirmation_path(resource_name), class: 'text-footer'  %><br/>
 <% end -%>
 
