--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -82,7 +82,7 @@ $body-bg: $body-color;
 
   &:hover {
     color: white;
-    background-color: $primary-dark;
+    background-color: $primary;
   }
 }
 
@@ -96,6 +96,7 @@ $body-bg: $body-color;
   &:hover {
     color: white;
     background-color: $primary-dark;
+    border-color: $primary-dark;
   }
 }
 
