--- a/app/views/static_pages/project_info.erb
+++ b/app/views/static_pages/project_info.erb
@@ -3,15 +3,15 @@
     <%= render layout: 'shared/panel', locals: {title: 'Información del proyecto', size: 6, offset: 3} do %>
         <div class="row">
           <div class="col-md-10 col-md-offset-1 col-xs-12">
-            <p>La idea del proyecto nace como una iniciativa para ayudar a la asociación de estudiantes de la Escuela de
-              Ciencias de la Computación e Informática de la UCR para montar un sitio donde se muestre información
-              relevante para los estudiantes de la escuela.</p>
-            <p>La plataforma brinda acceso para que los estudiantes puedan consultar examenes de semestres ateriores,
-              con el fin de que los puedan utilizar como una especie de guía para estudiar. Junto con el material de
-              exámenes pasados, también se pueden consultar anuncios que los miembros de la asociación consideren
-              relevantes compartir con la comunidad estudiantil.</p>
+            <p>Plataforma AECCI nace como una iniciativa para ayudar a la Asociación de estudiantes de la Escuela de
+              Ciencias de la Computación e Informática de la Universidad de Costa Rica (UCR). El objetivo es proveer un
+              sitio web donde se muestre información relevante para los estudiantes de la escuela.</p>
+            <p>La plataforma está desarrollada hasta este momento para ofrecer el servicio de consultar exámenes de
+              semestres anteriores, con el fin de que los puedan utilizar como una especie de guía para estudiar. Además
+              se puede consultar anuncios que los miembros de la asociación consideren relevantes compartir con la
+              comunidad estudiantil.</p>
             <hr/>
-            <h5>¡Colabora con la plataforma!</h5>
+            <h4>¡Colabora con la plataforma!</h4>
             <p>La plataforma es de todos y para todos, por lo que todo el código fuente se encuentra disponible en un
               repositorio en <a href="https://github.com/fabo49/plataforma_AECCI" target="_blank">GitHub</a> para que
               colaboren con el desarrollo.</p>
