Link al proyecto en github

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -67,6 +67,8 @@
 // Seccion de los miembros de la asocia
 .body-about-us {
   background-color: #383838;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .name {
