--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,6 +23,7 @@
           <li>
             <%= link_to 'eMatricula', 'https://ematricula.ucr.ac.cr/ematricula/', class: 'text-footer', target: '_blank' %>
           </li>
+          <li><%= link_to 'Proyecto en GitHub', 'https://github.com/fabo49/plataforma_AECCI', class: 'text-footer', target: '_blank' %></li>
         </ul>
       </div>
       <div class="col-md-4 col-xs-12">
