--- a/app/views/tests/edit.html.erb
+++ b/app/views/tests/edit.html.erb
@@ -1,8 +1,8 @@
 <br/>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <%= link_to 'Mostrar', @test %> |
-    <%= link_to 'Regresar', tests_path %>
+    <%= link_to 'Mostrar', @test, class: 'text-footer' %> |
+    <%= link_to 'Regresar', tests_path, class: 'text-footer' %>
   </div>
 </div>
 <div class="row">
