--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -1,7 +1,7 @@
 <br/>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <%= link_to 'Regresar', tests_path %>
+    <%= link_to 'Regresar', tests_path, class: 'text-footer' %>
   </div>
 </div>
 <div class="row">
