Se le pasa el botón de "back to top" a todas las vistas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,5 +49,6 @@
 <div class="footer">
   <%= render 'layouts/footer' %>
 </div>
+<a href="#" class="back-to-top" alt="Volver arriba">Volver arriba</a>
 </body>
 </html>
