--- a/app/views/users_administration/index.html.erb
+++ b/app/views/users_administration/index.html.erb
@@ -10,14 +10,14 @@
     <table class="table table-striped table-condensed">
       <thead>
       <tr>
-        <th>Correo electrónico</th>
+        <th>Carné</th>
         <th colspan="2" class="center-cell"> Acciones</th>
       </tr>
       </thead>
       <tbody>
       <% @admins.each do |admin| %>
           <tr>
-            <td><%= admin.email %></td>
+            <td><%= admin.email.split('@').first %></td>
             <td class="center-cell">
               <% if policy(admin).toggle_admin? %>
                   <%= link_to toggle_admin_path(admin), method: :put, class: 'text-footer' do %>
@@ -50,14 +50,14 @@
         <table class="table table-striped table-condensed">
           <thead>
           <tr>
-            <th>Correo electrónico</th>
+            <th>Carné</th>
             <th colspan="2" class="center-cell"> Acciones</th>
           </tr>
           </thead>
           <tbody>
           <% @users.each do |user| %>
               <tr>
-                <td><%= user.email %></td>
+                <td><%= user.email.split('@').first %></td>
                 <td class="center-cell">
                   <%= link_to toggle_admin_path(user), method: :put, class: 'text-footer' do %>
                       <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Hacer administrador</span>
