--- a/app/assets/stylesheets/users_administration.scss
+++ b/app/assets/stylesheets/users_administration.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Users_administration controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.carne {
+  text-transform: capitalize;
+}
