--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -143,31 +143,41 @@
           <div class="row">
             <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xs-12">
               <div class="form-horizontal">
-                <div class="form-group">
-                  <div class="col-md-6">
-                    <% if ContactUs.require_name %>
+                <% if ContactUs.require_name %>
+                    <div class="col-md-5 col-xs-12">
+                      <div class="form-group">
                         <div class='string required' id='contact_us_contact_name_input'>
                           <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
                         </div>
-                    <% end %>
-                  </div>
-                  <div class="col-md-6">
-                    <div class='string required' id='contact_us_contact_email_input'>
-                      <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
+                      </div>
                     </div>
-                  </div>
-                </div>
+                    <div class="col-md-5 col-md-offset-2 col-xs-12">
+                      <div class="form-group">
+                        <div class='string required' id='contact_us_contact_email_input'>
+                          <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
+                        </div>
+                      </div>
+                    </div>
+                <% else %>
+                    <div class="col-xs-12">
+                      <div class="form-group">
+                        <div class='string required' id='contact_us_contact_email_input'>
+                          <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
+                        </div>
+                      </div>
+                    </div>
+                <% end %>
                 <% if ContactUs.require_subject %>
-                    <div class="form-group">
-                      <div class="col-xs-12">
+                    <div class="col-xs-12">
+                      <div class="form-group">
                         <div class='string required' id='contact_us_contact_subject_input'>
                           <%= f.text_field :subject, placeholder: 'Asunto' %>
                         </div>
                       </div>
                     </div>
                 <% end %>
-                <div class="form-group">
-                  <div class="col-xs-12">
+                <div class="col-xs-12">
+                  <div class="form-group">
                     <div class='text required' id='contact_us_contact_message_input'>
                       <%= f.text_area :message, class: 'form-control', rows: '5', placeholder: 'Mensaje' %>
                     </div>
