--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
 <div class="body-footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-4 col-xs-12">
+      <div class="col-sm-6 col-md-4 col-xs-12">
         <h5 class="title-footer">Enlaces de interés</h5>
         <ul>
           <li>
@@ -26,7 +26,7 @@
           <li><%= link_to 'Proyecto en GitHub', 'https://github.com/fabo49/plataforma_AECCI', class: 'text-footer', target: '_blank' %></li>
         </ul>
       </div>
-      <div class="col-md-4 col-xs-12">
+      <div class="col-sm-6 col-md-4 col-xs-12">
         <h5 class="title-footer">Mapa del sitio</h5>
         <ul>
           <li><%= link_to '¿Quiénes somos?', root_url<<'#about_us', class: 'text-footer' %></li>
@@ -72,7 +72,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 col-md-offset-3 col-xs-12">
+      <div class="col-sm-10 col-sm-offset-1 col-xs-12">
         <small>
           <hr/>
           <p class="text-center text-footer">Asociación de Estudiantes de la Escuela de Ciencias de la Computación e
