--- a/app/views/static_pages/_member_info.html.erb
+++ b/app/views/static_pages/_member_info.html.erb
@@ -4,7 +4,7 @@
     * position: posicion que la persona ocupa en la asocia
     * description: descripcion propia de cada uno
 %>
-<div class="col-md-4">
+<div class="col-sm-4">
   <div class="row">
     <div class="col-xs-12">
       <%= image_tag image_file, class: 'image-contact center-block img-responsive img-circle' %>
