--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -14,6 +14,9 @@
     background-size: 100%;
   }
 
+}
+// Cuando la pantalla llega al tamano "xs" (768px o -) entonces cambian algunos estilos
+@media screen and (max-width: 768px) {
   .body-contact {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -22,7 +25,6 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
-    margin-top: -10px;
   }
 }
 
@@ -34,6 +36,7 @@
   background-color: white;
   background-repeat: no-repeat;
   background-size: 100%;
+  margin: 0px;
 }
 
 // Cuerpo de la seccion de "contactenos"
@@ -44,13 +47,19 @@
   background-color: white;
   background-repeat: no-repeat;
   background-size: 100%;
+  margin: 0px;
 }
 
 .body-contact-alone {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: white;
-  margin-top: -10px;
+  margin-top: -10px 0px px;
+}
+
+// Para que el carousel se pegue al navbar
+.body-carousel{
+  margin: -10px 0px 0px;
 }
 
 // Esto es para que la imagen abarque el ancho completo del carousel
@@ -69,6 +78,7 @@
   background-color: #383838;
   padding-top: 30px;
   padding-bottom: 30px;
+  margin: 0px;
 }
 
 .name {
