--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,48 +1,50 @@
 <section>
-  <% ads = Ad.where(important: true) %>
-  <% if ads.count > 0 %>
-      <div id="carousel" class="carousel slide fix-carousel" data-ride="carousel">
-        <%# Indicadores %>
-        <ol class="carousel-indicators">
-          <% ads.each_index do |count| %>
-              <% if count == 0 %>
-                  <li class="active" data-slide-to=<%= count %> data-target="#carousel"></li>
-              <% else %>
-                  <li data-slide-to=<%= count %> data-target="#carousel"></li>
-              <% end %>
-          <% end %>
-        </ol>
-        <%# Wrappers para los slides %>
-        <div class="carousel-inner" role="listbox">
-          <% ads.each_with_index do |ad, count| %>
-              <% if count == 0 %>
-                  <div class="item active">
-                    <%= link_to image_tag(ad.image_carousel_url), ads_url << '#' << ad.title %>
-                    <div class="carousel-caption">
-                      <%= ad.title %>
+  <div class="body-carousel">
+    <% ads = Ad.where(important: true) %>
+    <% if ads.count > 0 %>
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+          <%# Indicadores %>
+          <ol class="carousel-indicators">
+            <% ads.each_index do |count| %>
+                <% if count == 0 %>
+                    <li class="active" data-slide-to=<%= count %> data-target="#carousel"></li>
+                <% else %>
+                    <li data-slide-to=<%= count %> data-target="#carousel"></li>
+                <% end %>
+            <% end %>
+          </ol>
+          <%# Wrappers para los slides %>
+          <div class="carousel-inner" role="listbox">
+            <% ads.each_with_index do |ad, count| %>
+                <% if count == 0 %>
+                    <div class="item active">
+                      <%= link_to image_tag(ad.image_carousel_url), ads_url << '#' << ad.title %>
+                      <div class="carousel-caption">
+                        <%= ad.title %>
+                      </div>
                     </div>
-                  </div>
-              <% else %>
-                  <div class="item">
-                    <%= link_to image_tag(ad.image_carousel_url), ads_url << '#' << ad.title %>
-                    <div class="carousel-caption">
-                      <%= ad.title %>
+                <% else %>
+                    <div class="item">
+                      <%= link_to image_tag(ad.image_carousel_url), ads_url << '#' << ad.title %>
+                      <div class="carousel-caption">
+                        <%= ad.title %>
+                      </div>
                     </div>
-                  </div>
-              <% end %>
-          <% end %>
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+                <% end %>
+            <% end %>
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
-      </div>
-  <% end %>
+    <% end %>
+  </div>
 </section> <%# Carousel %>
 <section>
   <div class="body-section">
@@ -141,17 +143,17 @@
       <br/>
       <%= form_for :contact_us_contact, url: contacts_path do |f| %>
           <div class="row">
-            <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xs-12">
+            <div class="col-lg-4 col-lg-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
               <div class="form-horizontal">
                 <% if ContactUs.require_name %>
-                    <div class="col-md-5 col-xs-12">
+                    <div class="col-md-5 col-xs-12 col-sm-5">
                       <div class="form-group">
                         <div class='string required' id='contact_us_contact_name_input'>
                           <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-5 col-md-offset-2 col-xs-12">
+                    <div class="col-md-5 col-md-offset-2 col-xs-12 col-sm-offset-2 col-sm-5">
                       <div class="form-group">
                         <div class='string required' id='contact_us_contact_email_input'>
                           <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
@@ -187,7 +189,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-2 col-md-offset-5">
+            <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
               <%= f.submit 'Enviar mensaje', class: 'btn btn-primary btn-block' %>
             </div>
           </div>
