--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -59,7 +59,7 @@
             <div class="form-group">
               <div class="col-xs-12">
                 <div class="pull-right">
-                  <%= f.check_box :important, class: 'checkbox-primary' %>
+                  <%= f.check_box :important %>
                   <%= f.label :important %>
                 </div>
               </div>
