--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -141,6 +141,12 @@ p {
   font-weight: 300; // "Roboto Light"
 }
 
+ul {
+  list-style-type: none;
+  padding-left: 15px;
+  margin: 0;
+}
+
 .btn-primary:hover {
   background-color: $primary-light;
   border-color: $primary-light;
