--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <%# Logo %>
-      <%= link_to image_tag('logo_aecci.png', class:'logo'), root_path, class: 'navbar-brand' %>
+      <%= link_to image_tag('logo_aecci.png', class: 'logo'), root_path, class: 'navbar-brand' %>
     </div>
     <%# Menú que irá dentro del botón de vista movil %>
     <div class="collapse navbar-collapse" id="opciones-navbar">
@@ -17,15 +17,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Anuncios', ads_path, id: 'nav_anuncios' %></li>
         <% if user_signed_in? %>
-            <li><%= link_to 'Banco de exámenes', courses_path%>
+            <li><%= link_to 'Banco de exámenes', courses_path %>
             </li>
             <% if current_user.admin? %>
                 <li><%= link_to 'Usuarios', users_path, id: 'nav_administracion_usuarios' %></li>
             <% end %>
             <li><%= link_to 'Cerrar sesión', destroy_user_session_path, method: :delete %></li>
         <% else %>
-            <li><%= button_to 'Ingresar', new_user_session_path, method: :get, class: 'btn navbar-btn btn-login' %></li>
-            <li><%= button_to 'Registrarse', new_user_registration_path, method: :get, class: 'btn navbar-btn btn-registro' %></li>
+            <li><%= button_to 'Ingresar', new_user_session_path, method: :get, class: 'btn navbar-btn btn-login btn-sm' %></li>
+            <li><%= button_to 'Registrarse', new_user_registration_path, method: :get, class: 'btn navbar-btn btn-registro btn-sm' %></li>
         <% end %>
       </ul>
     </div>
