--- a/app/views/shared/_user_card.erb
+++ b/app/views/shared/_user_card.erb
@@ -35,6 +35,6 @@
           </div>
         </div>
       </div>
-    </div> <!-- end front panel -->
-  </div> <!-- end card -->
-</div> <!-- end card-container -->
+    </div> <%# end front panel %>
+  </div> <%# end card %>
+</div> <%# end card-container %>
