--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -84,7 +84,7 @@
       <div class="col-md-6 col-md-offset-3 col-xs-12">
         <small>
           <p class="text-center text-footer">Creado bajo
-            licencia <%= link_to 'GPLv3', 'http://www.gnu.org/licenses/gpl-3.0.en.html', class: 'text-footer', target: '_blank' %></p>
+            licencia <b><%= link_to 'GPLv3', 'http://www.gnu.org/licenses/gpl-3.0.en.html', class: 'text-footer', target: '_blank' %></b></p>
         </small>
       </div>
     </div>
