--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -178,7 +178,7 @@ ul {
 
 // El cuerpo del pie de pagina
 .body-footer {
-  background-color: $grey-dark;
+  background-color: #383838;
   padding: 40px;
   margin: 0px;
 }
