--- a/app/assets/stylesheets/tests.scss
+++ b/app/assets/stylesheets/tests.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the tests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$screen-xs-max: 767px;
+@media screen and (max-width: $screen-xs-max) {
+  //Oculta las iniciales de los cursos cuando esta en movil
+  .initials {
+    display: none;
+  }
+}
