--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,7 +2,6 @@
 $primary: #f96816;
 $primary-light: #FF8946;
 $primary-dark: #C94A02;
-$link-color: $primary;
 $grey-dark: #2b2b2b;
 $grey-light: #9d9d9d;
 $grey-text: #666;
@@ -73,6 +72,17 @@ $body-bg: $body-color;
 @import "bootstrap";
 
 // == Botones de Inicio de sesión y registro ==
+
+@media screen and (max-width: $screen-xs-max) {
+  .btn-login {
+    margin-left: 15px !important;
+  }
+
+  .btn-registro {
+    margin-left: 15px !important;
+  }
+}
+
 .btn-login {
   background-color: transparent;
   padding: 8px 13px;
@@ -97,8 +107,8 @@ $body-bg: $body-color;
 
   &:hover {
     color: white;
-    background-color: $primary-dark;
-    border-color: $primary-dark;
+    background-color: $primary-light;
+    border-color: $primary-light;
   }
 }
 
@@ -168,10 +178,6 @@ ul {
   .form-control {
     color: $state-danger-text;
   }
-}
-
-.active {
-  background-color: $grey-light;
 }
 
 // Cuando enfoca un form
