--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,7 +24,7 @@
             <% end %>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
-                  <i class="fa fa-sign-out"></i> Cerrar sesión
+                  <small><i class="fa fa-sign-out"></i></small> Cerrar sesión
               <% end %>
             </li>
         <% else %>
