--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,7 +6,7 @@ $grey-dark: #2b2b2b;
 $grey-light: #9d9d9d;
 $grey-text: #666;
 $grey-link-nav-footer: #E0E0E0;
-$body-color: #f3f3f3;
+$body-color: #fafafa;
 $shadow-color: #888888;
 
 $brand-primary: $primary;
@@ -52,7 +52,7 @@ $dropdown-link-hover-color: $primary;
 
 // Forms
 $input-border-focus: $primary;
-$input-border-radius: 1px;
+$input-border-radius: 3px;
 $input-bg-disabled: white;
 
 // Panels
