--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -81,7 +81,8 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <h5>
-                <small><b>Última modificación: </b><%= ad.updated_at.to_date %></small>
+                <% date = ad.updated_at.to_date.to_s.split('-') %>
+                <small><i class="fa fa-calendar"></i>  <%= date[2]<<'-'<<date[1]<<'-'<<date[0] %></small>
               </h5>
             </div>
           </div>
