--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -135,8 +135,9 @@
     <div class="container-fluid">
       <br/>
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 col-xs-12">
           <h2 align="center" style="color:#666">Ponte en contacto con nosotros</h2>
+          <hr/>
         </div>
       </div>
       <br/>
@@ -145,16 +146,18 @@
             <div class="col-lg-4 col-lg-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
               <div class="form-horizontal">
                 <% if ContactUs.require_name %>
-                    <div class="col-md-5 col-xs-12 col-sm-5">
-                      <div class="form-group">
+                    <div class="form-group">
+                      <div class="col-xs-12">
                         <div class='string required' id='contact_us_contact_name_input'>
+                          <%= f.label :name, class: 'sr-only' %>
                           <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-5 col-md-offset-2 col-xs-12 col-sm-offset-2 col-sm-5">
-                      <div class="form-group">
+                    <div class="form-group">
+                      <div class="col-xs-12">
                         <div class='string required' id='contact_us_contact_email_input'>
+                          <%= f.label :email, class: 'sr-only' %>
                           <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
                         </div>
                       </div>
@@ -163,6 +166,7 @@
                     <div class="col-xs-12">
                       <div class="form-group">
                         <div class='string required' id='contact_us_contact_email_input'>
+                          <%= f.label :email, class: 'sr-only' %>
                           <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
                         </div>
                       </div>
@@ -172,14 +176,16 @@
                     <div class="col-xs-12">
                       <div class="form-group">
                         <div class='string required' id='contact_us_contact_subject_input'>
+                          <%= f.label :subject, class: 'sr-only' %>
                           <%= f.text_field :subject, placeholder: 'Asunto' %>
                         </div>
                       </div>
                     </div>
                 <% end %>
-                <div class="col-xs-12">
-                  <div class="form-group">
+                <div class="form-group">
+                  <div class="col-xs-12">
                     <div class='text required' id='contact_us_contact_message_input'>
+                      <%= f.label :message, class: 'sr-only' %>
                       <%= f.text_area :message, class: 'form-control', rows: '5', placeholder: 'Mensaje' %>
                     </div>
                   </div>
