--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -141,7 +141,7 @@
         </div>
       </div>
       <br/>
-      <%= form_for :contact_us_contact, url: contacts_path do |f| %>
+      <%= form_for :contact_us_contact, url: contacts_path, html: { onsubmit: 'validate_contact_form;' } do |f| %>
           <div class="row">
             <div class="col-lg-4 col-lg-offset-4 col-xs-12 col-sm-6 col-sm-offset-3">
               <div class="form-horizontal">
@@ -151,6 +151,9 @@
                         <div class='string required' id='contact_us_contact_name_input'>
                           <%= f.label :name, class: 'sr-only' %>
                           <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
+                          <p class="text-danger" id="name_alert">
+                            <small>Tiene que ingresar su nombre.</small>
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -158,16 +161,10 @@
                       <div class="col-xs-12">
                         <div class='string required' id='contact_us_contact_email_input'>
                           <%= f.label :email, class: 'sr-only' %>
-                          <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
-                        </div>
-                      </div>
-                    </div>
-                <% else %>
-                    <div class="col-xs-12">
-                      <div class="form-group">
-                        <div class='string required' id='contact_us_contact_email_input'>
-                          <%= f.label :email, class: 'sr-only' %>
-                          <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
+                          <%= f.text_field :email, class: 'form-control', placeholder: 'Correo' %>
+                          <p class="text-danger" id="mail_alert">
+                            <small>Tiene que ingresar su correo.</small>
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -186,7 +183,10 @@
                   <div class="col-xs-12">
                     <div class='text required' id='contact_us_contact_message_input'>
                       <%= f.label :message, class: 'sr-only' %>
-                      <%= f.text_area :message, class: 'form-control', rows: '5', placeholder: 'Mensaje' %>
+                      <%= f.text_area :message, class: 'form-control', rows: '5', placeholder: 'Ingrese su mensaje' %>
+                      <p class="text-danger" id="message_alert">
+                        <small>Tiene que ingresar el mensaje.</small>
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
           </div>
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
-              <%= f.submit 'Enviar mensaje', class: 'btn btn-primary btn-block' %>
+              <%= f.submit 'Enviar mensaje', class: 'btn btn-primary btn-block'%>
             </div>
           </div>
       <% end %>
