--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -161,7 +161,7 @@
                       <div class="col-xs-12">
                         <div class='string required' id='contact_us_contact_email_input'>
                           <%= f.label :email, class: 'sr-only' %>
-                          <%= f.text_field :email, class: 'form-control', placeholder: 'Correo' %>
+                          <%= f.email_field :email, class: 'form-control', placeholder: 'Correo' %>
                           <p class="text-danger" id="mail_alert">
                             <small>Tiene que ingresar su correo.</small>
                           </p>
