--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -88,15 +88,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-md-4 col-md-offset-4">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-offset-3 col-md-6">
           <hr style="background-color:#666"/>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-6 col-md-2 col-md-offset-4">
+        <div class="col-xs-6 col-sm-4 col-sm-offset-2 col-md-2 col-md-offset-4">
           <%= link_to 'Hablemos', '#contact_us', class: 'btn btn-primary btn-block' %>
         </div>
-        <div class="col-xs-6 col-md-2">
+        <div class="col-xs-6 col-sm-4 col-md-2">
           <%= link_to 'Conócenos', '#about_us', class: 'btn btn-info btn-block' %>
         </div>
       </div>
