--- a/app/views/static_pages/project_info.erb
+++ b/app/views/static_pages/project_info.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <%= render layout: 'shared/panel', locals: {title: 'Información del proyecto', size: 8, offset: 2} do %>
         <div class="row">
-          <div class="col-md-10 col-md-offset-1 col-xs-12">
+          <div class="col-sm-10 col-sm-offset-1 col-xs-12">
             <p>Plataforma AECCI nace como una iniciativa para ayudar a la Asociación de estudiantes de la Escuela de
               Ciencias de la Computación e Informática de la Universidad de Costa Rica (UCR). El objetivo es proveer un
               sitio web donde se muestre información relevante para los estudiantes de la escuela.</p>
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 col-md-offset-4">
+          <div class="col-sm-4 col-sm-offset-4">
             <div class="center-block">
               <%= link_to 'https://github.com/fabo49/plataforma_AECCI', class: 'btn btn-info btn-block', target: '_blank' do %>
                   <i class="fa fa-github"></i>
