--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @ad, html: {multipart: true} do |f| %>
+<%= form_for @ad, html: {multipart: true, id: 'new_ad_form'} do |f| %>
     <div class="row">
       <div class="col-md-8 col-md-offset-2 col-xs-12">
         <%= render 'shared/error_messages', object: @ad %>
