--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -50,7 +50,7 @@
 
 // Seccion de los miembros de la asocia
 .body-about-us {
-  background-color: #383838;
+  background-color: #2b2b2b;
   padding-top: 30px;
   padding-bottom: 30px;
   margin: 0px;
