--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -71,7 +71,7 @@
             <div id="carousel_part">
               <div class="form-group" id="ad_image_carousel_url_input">
                 <div class="col-md-4 col-lg-3">
-                  <%= f.label :image_carousel_url, id: 'label_img_carousel' %>
+                  <%= f.label :image_carousel_url%>
                 </div>
                 <div class="col-md-8 col-lg-9">
                   <%= f.file_field :image_carousel_url %>
