--- a/app/views/shared/_accordion.erb
+++ b/app/views/shared/_accordion.erb
@@ -12,7 +12,7 @@
     <h4 class="panel-title">
       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#<%= collapse_id %>" aria-expanded="<%= expand %>" aria-controls="#<%= collapse_id %>">
         <%= title %>
-        <span class="pull-right initials"><small> <%= initials ||= '' %></small></span>
+        <span class="pull-right hidden-xs"><small> <%= initials ||= '' %></small></span>
       </a>
     </h4>
   </div>
