corrección botón anuncios

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -55,7 +55,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="pull-right">
-              <%= link_to 'Agregar un anuncio', new_ad_path, class: 'btn btn-primary visible-xs-inline-block' %>
+              <%= link_to 'Agregar un anuncio', new_ad_path, class: 'btn btn-primary' %>
             </div>
           </div>
         </div>
