--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
   <%= render layout: 'shared/panel', locals: {title: 'Datos del examen', size: 8, offset: 2} do %>
       <div class="form-horizontal">
-        <%= form_for @test do |f| %>
+        <%= form_for @test, html: {multipart: true, id: 'test_form'}  do |f| %>
             <div class="form-group" id="test_course_id_input">
               <div class="col-sm-4 col-lg-3">
                 <%= f.label :course_id, class: 'required' %>
