Configuración de envío de correo electrónico en modo develpment

--- a/app/views/devise/mailer/_mail_header.erb
+++ b/app/views/devise/mailer/_mail_header.erb
@@ -1,4 +1,4 @@
-<h3>Plataforma de la asociacion de estudiantes de la escuela de computacion e informatica</h3>
+<h3>Plataforma de la asociación de estudiantes de la escuela de computación e informática</h3>
 <h4>Universidad de Costa Rica</h4>
 
 <h5>Estimado <%= @resource.email %>:</h5>
