--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,2 @@
 <%= render 'mail_header' %>
-
-<p>La plataforma de la AECCI comunica que su contrasena ha cambiado.</p>
+<p>La plataforma de la AECCI comunica que su contraseña ha cambiado.</p>
