--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,3 @@
 <%= render 'mail_header' %>
-
-<p>Confirme su cuenta en el siguiente vinculo</p>
-
+<p>Confirme su cuenta en el siguiente vinculo:</p>
 <p><%= link_to 'Confirmar mi cuenta', confirmation_url(@resource, confirmation_token: @token) %></p>
