--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,4 @@
 <%= render 'mail_header' %>
-
-<p>Alguien ha realizado una peticion para cambiar su contrasena.</p>
-<P>Este procedimiento se puede realizar ingresando en el siguiente vinculo</p>
-
+<p>Alguien ha realizado una petición para cambiar su contraseña.</p>
+<P>Este procedimiento se puede realizar ingresando en el siguiente vínculo</p>
 <p><b><%= link_to 'Cambiar mi contrasena', edit_password_url(@resource, reset_password_token: @token) %></b></p>
-
