Se pasa de warning a danger la alerta

--- a/app/views/static_pages/not_authorized.erb
+++ b/app/views/static_pages/not_authorized.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <br/>
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-      <div class="alert alert-warning" role="alert">
+      <div class="alert alert-danger" role="alert">
         <strong>¡Cuidado!</strong> Gandalf está cuidando de que no accedas a sitios que no teines permisos. <%= link_to 'Vuelve al inicio', root_path , class:'alert-link' %> para que no lo hagas enojar.
       </div>
     </div>
