--- a/app/views/static_pages/not_authorized.erb
+++ b/app/views/static_pages/not_authorized.erb
@@ -10,7 +10,7 @@
     <br/>
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <div class="alert alert-danger" role="alert">
-        <strong>¡Cuidado!</strong> Gandalf está cuidando de que no accedas a sitios que no teines permisos. <%= link_to 'Vuelve al inicio', root_path , class:'alert-link' %> para que no lo hagas enojar.
+        <strong>¡Cuidado!</strong> Gandalf está cuidando de que no accedas a sitios que no tienes permisos. <%= link_to 'Vuelve al inicio', root_path , class:'alert-link' %> para que no lo hagas enojar.
       </div>
     </div>
   </div>
