Se completa la parte del diseno de las notificaciones

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,17 @@
 <%= render 'layouts/navbar' %>
 <%= render 'shared/flash_messages' %>
 <div class="wrapper">
-  <%= yield %>
+
+  <% ruta = "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>
+  <% if ruta == root_url %>
+      <%= yield %>
+  <% else %>
+      <div class="container-fluid">
+        <div class="row">
+          <%= yield %>
+        </div>
+      </div>
+  <% end %>
   <div class="push"></div>
 </div>
 
