Se arreglan referencias al repositorio viejo y se corrige la referencia al mapa de la escuela

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,7 +23,7 @@
           <li>
             <%= link_to 'eMatricula', 'https://ematricula.ucr.ac.cr/ematricula/', class: 'text-footer', target: '_blank' %>
           </li>
-          <li><%= link_to 'Proyecto en GitHub', 'https://github.com/fabo49/plataforma_AECCI', class: 'text-footer', target: '_blank' %></li>
+          <li><%= link_to 'Proyecto en GitHub', 'https://github.com/AECCI-UCR/plataforma-web-AECCI', class: 'text-footer', target: '_blank' %></li>
         </ul>
       </div>
       <div class="col-sm-6 col-md-4 col-xs-12">
@@ -63,7 +63,7 @@
                 <% end %></h4>
             </div>
             <div class="col-xs-1">
-              <h4 class="text-center"><%= link_to 'https://goo.gl/maps/qce48V5g1F52', class: 'text-footer', target: '_blank' do %>
+              <h4 class="text-center"><%= link_to 'https://goo.gl/maps/sabdDvd4sDm', class: 'text-footer', target: '_blank' do %>
                     <i class="fa fa-map-marker"></i>
                 <% end %></h4>
             </div>
