--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -93,11 +93,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-6 col-sm-4 col-sm-offset-2 col-md-2 col-md-offset-4">
-          <%= link_to 'Hablemos', '#contact_us', class: 'btn btn-primary btn-block' %>
-        </div>
-        <div class="col-xs-6 col-sm-4 col-md-2">
-          <%= link_to 'Conócenos', '#about_us', class: 'btn btn-info btn-block' %>
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+          <%= link_to 'Hablemos', '#contact_us', class: 'btn btn-info btn-block' %>
         </div>
       </div>
       <br/>
