Se agrega la informacion correcta para la seccion de la info de la AECCI

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -60,30 +60,37 @@
         </div>
         <div class="col-xs-12 col-md-5">
           <p class="info-asocia">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Integer posuere erat a ante. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Integer posuere erat a ante.
+            La AECCI es una agrupación sin ninguna adhesión religiosa, política o ideológica; respetándose las
+            preferencias de cada uno de los integrantes de la misma.
           </p>
           <br/>
           <p class="info-asocia">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Integer posuere erat a ante. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Integer posuere erat a ante.
-          </p>
-          <br/>
-          <p class="info-asocia">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Integer posuere erat a ante. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Integer posuere erat a ante.
+            Los objetivos específicos de la asociación de estudiantes de la ECCI son:
+            <ul>
+              <li>
+          <p>Promover la capacitación humanística, técnica y científica de los estudiantes de Ciencias de
+            la Computación e Informática de la Universidad de Costa Rica, respondiendo a nuestra
+            realidad nacional y a la vez consciente del papel del estudiante en ella.</p>
+          </li>
+          <li>
+            <p>Promover el fortalecimiento y la unión fraternal y provechosa de los estudiantes de Ciencias
+              de la Computación e Informática.</p>
+          </li>
+          <li>
+            <p>Estimular la formación de un estudiante consciente, crítico y responsable.</p>
+          </li>
+          <li>
+            <p>Orientar a sus asociados para el cumplimiento de sus deberes y derechos para la con la
+              Universidad y el país.</p>
+          </li>
+          <li>
+            <p>Velar por la solución de los problemas individuales o colectivos que enfrenten sus
+              miembros.</p>
+          </li>
+          <li>
+            <p>Promover el desarrollo de actividades culturales, deportivas, recreativas y de cualquier otra</p>
+          </li>
+          </ul>
           </p>
         </div>
       </div>
