Se arreglan las vistas

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -49,7 +49,7 @@
   </div>
 </div>
 <% if policy(Course).rest_operation? %>
-    <div class="row">
+    <div class="row" style="margin-bottom:10px;">
       <div class="col-md-8 col-md-offset-2">
         <div class="pull-right">
           <%= link_to 'Administrar exámenes', tests_path, class: 'btn btn-primary' %></div>
