--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -81,13 +81,13 @@
     <div class="row">
       <hr/>
     </div>
-    <div class="row">
+    <div class="row" style="margin-bottom: 10px;">
       <div class="col-xs-12">
         <div class="pull-right">
           <%= link_to 'Agregar un examen', new_test_path, class: 'btn btn-primary' %>
-          <br/>
         </div>
       </div>
+      <br/>
     </div>
   </div>
 </div>
