--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -277,6 +277,7 @@ label.required:after {
 
 @media screen and (max-width: 767px) {
   .flash-messages {
+    margin-top: 5px;
     position: fixed;
     width: 100%;
     left: 0;
