--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -354,3 +354,13 @@ html, body {
 .footer, .push {
   height: 4em;
 }
+
+// Estilos propios del selectize
+
+.selectize-input.focus{
+  border: 2px solid $primary;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -o-box-shadow: none;
+}
