--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -102,7 +102,11 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-          <%= link_to 'Hablemos', '#contact_us', class: 'btn btn-info btn-block' %>
+          <% if user_signed_in? %>
+              <%= link_to 'Material para estudiantes', courses_path, class: 'btn btn-info btn-block' %>
+          <% else %>
+              <%= link_to 'Inicia sesión', new_user_session_path, method: :get, class: 'btn btn-info btn-block' %>
+          <% end %>
         </div>
       </div>
       <br/>
